[package]
name = "hson_gen"
version = "0.1.0"
authors = ["Backprog"]
edition = "2018"
homepage = "https://github.com/backprog/hson_gen"
repository = "https://github.com/backprog/hson_gen.git"
description = "Generate HTML from hson data"
readme = "README.md"
keywords = ["json", "html", "hson", "html-generator"]
license-file = "LICENSE.txt"
exclude = [
    "main.rs"
]


[dependencies]
hson = "0.1.4"
lazy_static = "1.2.0"
